@startuml
package Models {
  class Sensor {
    +int    SensorId
    +string SensorType
    … other props …
    +ICollection<Maintenance> Maintenances
  }
  class User {
    +int    UserId
    +string FirstName
    +string LastName
    … other props …
    +ICollection<Maintenance> Maintenances
  }
  class Maintenance {
    +int      MaintenanceId
    +DateTime? MaintenanceDate
    +string   MaintainerComments
    +int      SensorId
    +int      MaintainerId
    +bool     IsOverdue { get; }
    +bool     IsUpcoming { get; }
  }
  Sensor "1" <-- "*" Maintenance
  User   "1" <-- "*" Maintenance
}
@enduml
